--- a/package.json
+++ b/package.json
@@ -6,16 +6,31 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "bootstrap": "^4.5.3",
+    "bootstrap-social": "5.1.1",
+    "font-awesome": "^4.7.0",
+    "mdbreact": "^4.27.0",
     "react": "^17.0.1",
+    "react-accessible-accordion": "^3.3.3",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.0",
+    "react-redux-form": "^1.16.14",
+    "react-router-dom": "5.2.0",
     "react-scripts": "4.0.0",
+    "react-spring": "^8.0.27",
+    "reactstrap": "^8.6.0",
+    "redux": "^4.0.5",
+    "styled-components": "^5.2.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -34,5 +49,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
