--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://courtneyyatteau.github.io/portfolio-project-react/",
   "name": "portfolio-project-react",
   "version": "0.1.0",
   "private": true,
