--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-spring": "^8.0.27",
     "reactstrap": "^8.6.0",
     "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^5.2.0",
     "web-vitals": "^0.2.4"
   },
